--- a/css/tao_blog.css
+++ b/css/tao_blog.css
@@ -1,7 +1,4 @@
 #top_pic{
-  /*width: 100%;*/
-  /*height: 580px;   改为document加载时由jquery动态确定*/
-  /*margin-top: 0px ;*/
   text-align: center;
 }
 #top_pic img{
@@ -385,6 +382,7 @@
 #catalogue_father{
   padding: 0;
 }
+
 #catalogue{
   position: relative;
   top: 0px;
@@ -427,3 +425,61 @@
   font-size: 15px/30px;
   color: #000000;
 }
+
+
+/*自适应调整*/
+body{
+  min-width: 650px;
+}
+#top_pic img{
+  min-width: 500px;
+}
+/*便利贴字体大小*/
+@media screen and (max-width: 1050px){
+  .tag_content h1{
+    font-size: 35px;  
+    margin-top: -88%;
+  }
+  .tag_content h2{
+    font-size: 55px;  
+    margin-top: -20px;
+  }
+  #top_pic h1{
+    font-size: 35px;
+  }
+  #top_pic h2{
+    font-size: 80px;
+  }
+}
+/*隐藏右目录*/
+@media screen and (max-width: 850px){
+  #catalogue_father{
+    display: none;
+  }
+  #articles{
+    width: 100%;
+  }
+  #top_pic h1{
+    font-size: 30px;
+  }
+  #top_pic h2{
+    font-size: 60px;
+  }
+}
+
+
+@media screen and (max-width: 650px){
+  #articles .tag{
+    display: none;
+  }
+  #articles .col-lg-9{
+    width: 100%;
+  }
+  #top_pic h1{
+    font-size: 20px;
+  }
+  #top_pic h2{
+    font-size: 45px;
+  }
+}
+
