--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 #top_pic{
   text-align: center;
+  height: 422px;
 }
 #top_pic img{
   width: 100%;
@@ -10,6 +11,7 @@
 /*一定要把背景的 position: fixed 放在子标签h1中，不然会出bug！！！*/
 #top_pic h1{
   position: fixed; 
+  display: none;
   z-index: -2;
   /*  left,right用于在fixed状态下元素居中 */
   /*margin:0px auto;*/
@@ -20,6 +22,7 @@
 }
 #top_pic h2{
   position: fixed; 
+  display: none;
   z-index: -2;
   left:0;
   right:0;
